--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Простое приложение для общения с GigaChat через API",
   "main": "server/app.js",
   "scripts": {
-    "start": "node server/app.js"
+    "start": "nodemon server/app.ts",
+    "build": "tsc",
+    "watch": "tsc -w"
   },
   "dependencies": {
     "body-parser": "^1.19.x",
@@ -13,7 +15,15 @@
     "express": "^4.18.x",
     "gigachat": "^0.0.16"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/dotenv": "^8.2.3",
+    "@types/express": "^5.0.6",
+    "@types/node": "^24.10.1",
+    "nodemon": "^3.1.11",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC"
