--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "cors": "^2.8.x",
     "dotenv": "^16.x",
     "express": "^4.18.x",
-    "gigachat": "^0.0.16"
+    "gigachat": "^0.0.16",
+    "winston": "^3.19.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
