--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "dotenv": "^16.x",
     "express": "^4.18.x",
     "gigachat": "^0.0.16",
+    "sequelize": "^6.37.7",
+    "sqlite3": "^5.1.7",
     "winston": "^3.19.0"
   },
   "devDependencies": {
@@ -21,6 +23,8 @@
     "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.6",
     "@types/node": "^24.10.1",
+    "@types/sequelize": "^6.12.0",
+    "@types/sqlite3": "^5.1.0",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
